tests/fixtures/realworld/istio/valid/case-024-RW-8-24-Gateway-valid-with-TLS-passthrough.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: passthrough-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - mtls.example.com
    tls:
      mode: PASSTHROUGH
